# pre_tune

./: .env.example  .gitignore  README.md  pre_tune.py  pyproject.toml  requirements.txt
pre_tune_app/: main_service.py
pre_tune_app/cli/: __init__.py  args.py
pre_tune_app/config/: settings.py
pre_tune_app/domain/: __init__.py  errors.py  models.py  sentences.py
pre_tune_app/error_handles/: __init__.py  errors.py  limiter.py  runner.py
pre_tune_app/infra/: __init__.py  db.py
pre_tune_app/infra/cache/: redis_cache.py
pre_tune_app/infra/ratelimit/: gemini_error_utils.py  global_limiter.py  redis_bucket.py
pre_tune_app/infra/repositories/: __init__.py  chunks_repo.py  documents_repo.py
pre_tune_app/llm/: __init__.py  gemini_classifier.py  gemini_group_merge.py  gemini_splitter.py  gemini_text.py  gemini_vision.py  interfaces.py
pre_tune_app/llm/utils/: tokens.py
pre_tune_app/pipeline/: __init__.py  context.py  factory.py  step.py
pre_tune_app/pipeline/steps/: __init__.py  classify_completeness.py  dedupe.py  disambiguation.py  embed_sentences.py  gemini_merge_confirm.py  group_variants.py  list_detect_flatten.py  locale_normalize.py  merge_continues.py  package.py  post_validate.py  prepare_canon_for_pretune.py  reliability_guard.py  sentence_split.py  sentence_stitcher_step.py  text_clean.py  triage.py  vision_fix.py  vn_header_filter_llm.py
